Stable versions
---------------

4.3.9 ():

4.3.8 (20150404):
	Fix bugs caught in the OpenMPT test cases:
	- fix pre-increment of envelope indexes
	- fix IT note release at end of envelope sustain loop
	- reset channel flags in case of delay effect
	Other changes:
	- fix MMD3 16-bit samples (reported by jbb666)
	- refactor XM envelopes
	- refactor IT envelopes

4.3.7 (20150329):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT sample mode note cut on invalid sample
	- fix IT sample mode note end detection
	- fix IT envelope handling with carry and fadeout
	- fix IT tone portamento with sample changes
	- fix IT initial global volume setting
	- fix IT keyoff with instrument in old effects mode
	- fix IT filter maximum values with resonance
	Other changes:
	- fix IT random volume variation
	- fix pattern initialization sanity check
	- fix ++ pattern handling in IT loader (reported by honguito98)
	- fix Soundtracker short rip loading (reported by Shlomi Fish)
	- add IT high offset command (SAx)
	- add IT surround command (S9x)
	- add IT surround channel support
	- add IT sample pan setting support

4.3.6 (20150322):
	Fix bugs caught in the OpenMPT test cases:
	- fix IT volume column volume slide effect memory
	- fix IT default filter cutoff on new note
	- fix IT filter envelope memory
	Fix crashes with fuzzed files (reported by Lionel Debroux):
	- add sanity check to MED2/3/4 loader
	- add sanity check to STIM/GDM/DBM/LIQ/ICE/PSM/PTM/MGT loader
	- add sanity check to MDL/RAD/MGT/IMF/RTM/DT/LIQ/DTM pattern loader
	- add sanity check to OKT/IMF/MMD/MDL sample loader
	- add sanity check to Archimedes Tracker format test
	- add sanity check to Digital Symphony track loader
	- add sanity checks to SQSH, bzip2, arc, lha, lzx and S404 depackers
	- add sanity check for AMD/STX number of patterns
	- add sanity check for DSYM/MMD1/MMD3 number of channels
	- add sanity check for MMD1/MMD3 instrument type
	- add sanity check for IT old instrument loading