@@ -2,6 +2,8 @@ Stable versions
 ---------------
 
 4.3.9 ():
+	Fix bugs caught in the OpenMPT test cases:
+	- Fix IT tone portamento on sample change and NNA
 
 4.3.8 (20150404):
 	Fix bugs caught in the OpenMPT test cases:
